Closed Bug 695936 Opened 14 years ago Closed 14 years ago

Printing messages with attached messages doesn't show their filename

Categories

(MailNews Core :: Printing, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 14.0

People

(Reporter: squib, Unassigned)

Details

Attachments

(1 file)

After looking at bug 664640, I noticed that when printing a message with attached messages, the attached messages don't list the filename. You end up with something like this: -- image.jpg ------------------- [ a happy tree ] -------------------------------- Subject: My email ... Now, I'm not actually sure we want to show the filename of the email when printing, but we do show it in the attachment list at the end. In any case, the fix is really easy.
Oh, I forgot to say: we also show the filename of the attached email when viewing it or saving it as an HTML file, just not when printing.
(In reply to Jim Porter (:squib) from comment #0) > Created attachment 568277 [details] [diff] [review] > Show the filename for attached messages when printing Jim why didn't you set any flags on this patch ?
Comment on attachment 568277 [details] [diff] [review] Show the filename for attached messages when printing > (In reply to Jim Porter (:squib) from comment #0) > Jim why didn't you set any flags on this patch ? I forgot about this bug, actually...
Attachment #568277 - Flags: feedback?(bwinton)
Comment on attachment 568277 [details] [diff] [review] Show the filename for attached messages when printing Yeah, that makes sense to me. Mumble mumble needs tests, and also, shouldn't you be spending your time on BigFiles? ;) Thanks, Blake.
Attachment #568277 - Flags: feedback?(bwinton) → feedback+
(In reply to Blake Winton (:bwinton - Thunderbird UX) from comment #4) > Mumble mumble needs tests, and also, shouldn't you be spending your time on > BigFiles? ;) Well, I did upload this last October...
(In reply to Blake Winton (:bwinton - Thunderbird UX) from comment #4) > Mumble mumble needs tests For my reference when I come back to this: is it even possible to test printing? (Maybe via print preview?)
Comment on attachment 568277 [details] [diff] [review] Show the filename for attached messages when printing Bienvenu, does this look ok? I'd write tests, as Bwinton advised, but I'm not even sure it's possible to test printing.
Attachment #568277 - Flags: review?(dbienvenu)
Comment on attachment 568277 [details] [diff] [review] Show the filename for attached messages when printing yes, it looks OK. I don't know if it's possible to test printing in any reasonable way, but my guess is that it's way harder than it's worth.
Attachment #568277 - Flags: review?(dbienvenu) → review+
Could we do something like reftest ?
Checked in: http://hg.mozilla.org/comm-central/rev/648108b6f425 Since automated tests are a bit difficult for this, maybe we should do a litmus test instead. It should be a simple test: 1) Find an email, and forward it as an attachment to yourself 2) Open the new email, and select "Print Preview" 3) Ensure that the header above the attached message says "<message subject>.eml"
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 14.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: