Bug 695936 - Printing messages with attached messages doesn't show their filename; r=bienvenu